# libLogs

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.txt  insideAPI.cpp  insideAPI.h  libLogs.cpp  libLogs.h  libLogs.sln  libLogs.vcxproj  libLogs.vcxproj.filters  libLogsMacro.h  libPlatform.h  platform.h  timeShareLogsSystem.cpp  timeShareLogsSystem.h
include/: libLogsMacro.h
src/: CMakeLists.txt  insideAPI.h  libLogs.h  timeShareLogsSystem.cpp  timeShareLogsSystem.h
